weight/value by farm, dateRange
