# server-src/models/responses/ValueReportResponse.ts
@@ -1,0 +1,4 @@
+export interface ValueReportResponse {
+    farmName: string;
+    value: number;
+}
